<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp125"
            android:text="@string/app_name"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/sp40" />

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="@dimen/dp300"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/full_name" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etFullName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp30"
            android:text="@string/start_quiz" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>